dataset1235/2025-2/610742602/users/2774042468/executions/2563853024_2403290319.log
== SUBMISSION (2025-09-02 20:27:28)
-- CODE: 
preco = float(int(input(2))
quantidade = int(input(2))

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
File "XXXX", line 1
    preco = float(int(input(2))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
File "XXXX", line 1
    preco = float(int(input(2))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
File "XXXX", line 1
    preco = float(int(input(2))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
File "XXXX", line 1
    preco = float(int(input(2))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
File "XXXX", line 1
    preco = float(int(input(2))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
File "XXXX", line 1
    preco = float(int(input(2))
                 ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:25:26)
-- CODE: 
preco = float(int(input(15))
quantidade = int(input(2))

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
File "XXXX", line 1
    preco = float(int(input(15))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
File "XXXX", line 1
    preco = float(int(input(15))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
File "XXXX", line 1
    preco = float(int(input(15))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
File "XXXX", line 1
    preco = float(int(input(15))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
File "XXXX", line 1
    preco = float(int(input(15))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
File "XXXX", line 1
    preco = float(int(input(15))
                 ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:25:24)
-- CODE: 
preco = float(int(input(15))
quantidade = int(input(2))

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
File "XXXX", line 1
    preco = float(int(input(15))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
File "XXXX", line 1
    preco = float(int(input(15))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
File "XXXX", line 1
    preco = float(int(input(15))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
File "XXXX", line 1
    preco = float(int(input(15))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
File "XXXX", line 1
    preco = float(int(input(15))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
File "XXXX", line 1
    preco = float(int(input(15))
                 ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:25:25)
-- CODE: 
preco = float(int(input(15))
quantidade = int(input(2))

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
File "XXXX", line 1
    preco = float(int(input(15))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
File "XXXX", line 1
    preco = float(int(input(15))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
File "XXXX", line 1
    preco = float(int(input(15))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
File "XXXX", line 1
    preco = float(int(input(15))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
File "XXXX", line 1
    preco = float(int(input(15))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
File "XXXX", line 1
    preco = float(int(input(15))
                 ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:24:52)
-- CODE: 
preco = float(input(15))
quantidade = int(input(2))

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
1522433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
15255.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
15276.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
15240.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
152123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
15291.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:24:07)
-- CODE: 
preco = float(input(15))
quantidade = int(input(2))

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
1522433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
15255.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
15276.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
15240.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
152123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
15291.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:36:05)
-- CODE: 
preco = float(int(input("numero"))
quantidade = int(input("numero"))

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
File "XXXX", line 1
    preco = float(int(input("numero"))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
File "XXXX", line 1
    preco = float(int(input("numero"))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
File "XXXX", line 1
    preco = float(int(input("numero"))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
File "XXXX", line 1
    preco = float(int(input("numero"))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
File "XXXX", line 1
    preco = float(int(input("numero"))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
File "XXXX", line 1
    preco = float(int(input("numero"))
                 ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:36:04)
-- CODE: 
preco = float(int(input("numero"))
quantidade = int(input("numero"))

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
File "XXXX", line 1
    preco = float(int(input("numero"))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
File "XXXX", line 1
    preco = float(int(input("numero"))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
File "XXXX", line 1
    preco = float(int(input("numero"))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
File "XXXX", line 1
    preco = float(int(input("numero"))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
File "XXXX", line 1
    preco = float(int(input("numero"))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
File "XXXX", line 1
    preco = float(int(input("numero"))
                 ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:24:52)
-- CODE: 
preco = float(input(15))
quantidade = int(input(2))

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
1522433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
15255.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
15276.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
15240.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
152123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
15291.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:24:05)
-- CODE: 
preco = float(input(15))
quantidade = int(input(2))

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
1522433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
15255.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
15276.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
15240.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
152123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
15291.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:27:27)
-- CODE: 
preco = float(int(input(2))
quantidade = int(input(2))

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
File "XXXX", line 1
    preco = float(int(input(2))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
File "XXXX", line 1
    preco = float(int(input(2))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
File "XXXX", line 1
    preco = float(int(input(2))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
File "XXXX", line 1
    preco = float(int(input(2))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
File "XXXX", line 1
    preco = float(int(input(2))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
File "XXXX", line 1
    preco = float(int(input(2))
                 ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:24:54)
-- CODE: 
preco = float(input(15))
quantidade = int(input(2))

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
1522433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
15255.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
15276.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
15240.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
152123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
15291.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:25:29)
-- CODE: 
preco = float(int(input(15))
quantidade = int(input(2))

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
File "XXXX", line 1
    preco = float(int(input(15))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
File "XXXX", line 1
    preco = float(int(input(15))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
File "XXXX", line 1
    preco = float(int(input(15))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
File "XXXX", line 1
    preco = float(int(input(15))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
File "XXXX", line 1
    preco = float(int(input(15))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
File "XXXX", line 1
    preco = float(int(input(15))
                 ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
